# droidnode

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/executor/: Cargo.toml
agent/executor/src/: error.rs  lib.rs  models.rs
agent/executor/src/brokers/: control_plane_broker.rs  filesystem_broker.rs  mod.rs  oci_registry_broker.rs  proot_broker.rs
agent/executor/src/exposers/: mod.rs  virtual_kubelet_exposer.rs
agent/executor/src/services/: mod.rs
agent/executor/src/services/foundation/: event_recording_service.rs  health_probe_service.rs  image_pull_service.rs  image_unpack_service.rs  mod.rs  node_capability_service.rs  workload_execution_service.rs
agent/executor/src/services/orchestration/: image_orchestration_service.rs  mod.rs  node_registration_service.rs  reconciliation_service.rs  workload_lifecycle_service.rs
agent/node-agent/: Cargo.toml
agent/node-agent/src/: main.rs
android/: .gitignore  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/droidnode/: BootReceiver.kt  LogBuffer.kt  MainActivity.kt
android/app/src/main/java/com/droidnode/brokers/: BatteryBroker.kt  NetworkBroker.kt  RustProcessBroker.kt  UnixSocketBroker.kt  WakeLockBroker.kt
android/app/src/main/java/com/droidnode/exposers/: ForegroundServiceExposer.kt
android/app/src/main/java/com/droidnode/ui/: DebugActivity.kt
android/app/src/main/res/layout/: activity_debug.xml
deploy/: rbac.yaml
scripts/: build-android.sh
(+3 files in other folders)
