[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tar = "0.4"
flate2 = "1"
sha2 = { version = "0.10", features = ["std"] }
hex = "0.4"
axum = { version = "0.7", features = ["ws"] }
kube = { version = "0.88", features = ["client", "runtime", "derive"] }
k8s-openapi = "0.21"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
