[package]
name = "node-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node-agent"
path = "src/main.rs"

[dependencies]
executor = { path = "../executor" }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hostname = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-rustls = "0.26"
